--- a/.gitmodules
+++ b/.gitmodules
@@ -117,3 +117,119 @@
 	path = plugins/scl-communication-editor
 	url = https://github.com/jarradraumati/scl-communication-editor
 	branch = gh-pages
+[submodule "submodule.open-scd-core.path"]
+	path = open-scd-core
+	url = https://github.com/jarradraumati/open-scd-core
+	branch = gh-pages
+[submodule "submodule.plugins/scl-editor-landing.path"]
+	path = plugins/scl-editor-landing
+	url = https://github.com/openenergytools/scl-editor-landing
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-open.path"]
+	path = plugins/oscd-open
+	url = https://github.com/openenergytools/oscd-open
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-save.path"]
+	path = plugins/oscd-save
+	url = https://github.com/openenergytools/oscd-save
+	branch = gh-pages
+[submodule "submodule.plugins/scl-validating.path"]
+	path = plugins/scl-validating
+	url = https://github.com/jarradraumati/scl-validating
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-publisher.path"]
+	path = plugins/oscd-publisher
+	url = https://github.com/jarradraumati/oscd-publisher
+	branch = gh-pages
+[submodule "submodule.plugins/scl-import-ied.path"]
+	path = plugins/scl-import-ied
+	url = https://github.com/openenergytools/scl-import-ied
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-template-generator.path"]
+	path = plugins/oscd-template-generator
+	url = https://github.com/OpenEnergyTools/oscd-template-generator
+	branch = gh-pages
+[submodule "submodule.plugins/scl-substation-editor.path"]
+	path = plugins/scl-substation-editor
+	url = https://github.com/jarradraumati/scl-substation-editor
+	branch = gh-pages
+[submodule "submodule.plugins/scl-wizarding.path"]
+	path = plugins/scl-wizarding
+	url = https://github.com/jarradraumati/scl-wizarding
+	branch = gh-pages
+[submodule "submodule.plugins/scl-communication.path"]
+	path = plugins/scl-communication
+	url = https://github.com/jarradraumati/scl-communication
+	branch = gh-pages
+[submodule "submodule.plugins/scl-template.path"]
+	path = plugins/scl-template
+	url = https://github.com/openenergytools/scl-template
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-subscriber-later-binding.path"]
+	path = plugins/oscd-subscriber-later-binding
+	url = https://github.com/jarradraumati/oscd-subscriber-later-binding
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-supervision.path"]
+	path = plugins/oscd-supervision
+	url = https://github.com/jarradraumati/oscd-supervision
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-tp-multicast-naming.path"]
+	path = plugins/oscd-tp-multicast-naming
+	url = https://github.com/jarradraumati/oscd-tp-multicast-naming
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-network-data.path"]
+	path = plugins/oscd-network-data
+	url = https://github.com/jarradraumati/oscd-network-data
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-subscriber-lb-siemens.path"]
+	path = plugins/oscd-subscriber-lb-siemens
+	url = https://github.com/jarradraumati/oscd-subscriber-lb-siemens
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-subscriber-lb-sel.path"]
+	path = plugins/oscd-subscriber-lb-sel
+	url = https://github.com/jarradraumati/oscd-subscriber-lb-sel
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-subscriber-lb-nr.path"]
+	path = plugins/oscd-subscriber-lb-nr
+	url = https://github.com/jarradraumati/oscd-subscriber-lb-nr
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-import-templates.path"]
+	path = plugins/oscd-import-templates
+	url = https://github.com/jarradraumati/oscd-import-templates
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-description.path"]
+	path = plugins/oscd-description
+	url = https://github.com/jarradraumati/oscd-description
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-automatic-backup.path"]
+	path = plugins/oscd-automatic-backup
+	url = https://github.com/jarradraumati/oscd-automatic-backup
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-rename-ieds.path"]
+	path = plugins/oscd-rename-ieds
+	url = https://github.com/jarradraumati/oscd-rename-ieds
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-network-config.path"]
+	path = plugins/oscd-network-config
+	url = https://github.com/jarradraumati/oscd-network-config
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-designer.path"]
+	path = plugins/oscd-designer
+	url = https://github.com/jarradraumati/oscd-designer
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-plugins.path"]
+	path = plugins/oscd-plugins
+	url = https://github.com/sprinteins/oscd-plugins
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-import-ieds.path"]
+	path = plugins/oscd-import-ieds
+	url = https://github.com/jarradraumati/oscd-import-ieds
+	branch = gh-pages
+[submodule "submodule.plugins/oscd-remove-ieds.path"]
+	path = plugins/oscd-remove-ieds
+	url = https://github.com/jarradraumati/oscd-remove-ieds
+	branch = gh-pages
+[submodule "submodule.plugins/scl-communication-editor.path"]
+	path = plugins/scl-communication-editor
+	url = https://github.com/jarradraumati/scl-communication-editor
+	branch = gh-pages
