--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "start": "web-dev-server"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.5",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@babel/preset-env": "^7.16.4",
+    "@open-wc/building-rollup": "^2.0.2",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-terser": "0.4.4",
-    "@web/dev-server": "^0.4.4",
-    "@web/rollup-plugin-html": "^2.3.0",
-    "@web/rollup-plugin-import-meta-assets": "^2.2.1",
+    "@web/dev-server": "^0.1.34",
+    "@web/rollup-plugin-html": "^1.11.0",
+    "@web/rollup-plugin-import-meta-assets": "^1.0.7",
     "babel-plugin-template-html-minifier": "^4.1.0",
     "gh-pages": "^6.1.1",
-    "rimraf": "^5.0.5",
-    "rollup": "^4.17.2",
-    "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-workbox": "^8.1.0"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.60.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-workbox": "^6.2.0"
   }
 }
